# cpp-multi

./: README.md
core/: CMakeLists.txt  hello.cpp  lib_hello.cpp  lib_hello.h
core/coolios/: CMakeLists.txt  coolios.cxx  coolios.hxx
core/coolios/test/: coolios_test.cxx
